log/build_2023-05-07_20-10-39/locomotion_core/stderr.log
  File "/home/rsl/Desktop/Indoor_Mobile_Robotic_Arm/Thesis/ws/install/locomotion_core/lib/python3.8/site-packages/locomotion_core/RoverDescription.py", line 9
    def __init__(name='RobArm', robot_measurement, self):
                 ^
SyntaxError: non-default argument follows default argument

